--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Book Library</title>
   </head>
   <body id="root">
-    <script type="module" src="/src/main.tsx"></script>
+    <h1>heyllo world</h1>    
   </body>
 </html>
