--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,7 @@
     <title>Book Library</title>
   </head>
   <body id="root">
+        <script type="module" src="/src/main.tsx"></script>
     <h1>heyllo world</h1>    
   </body>
 </html>
